--- a/front/src/lib/styles/pages/category.css
+++ b/front/src/lib/styles/pages/category.css
@@ -24,12 +24,16 @@
       text-align: center;
     }
     .page-navigation.mini.top {
+      display: block;
       position: absolute;
       top: 2.5rem;
       right: 0;
       padding: 0.5rem;
       .page-navigation-toggle {
         padding: 0.25rem;
+      }
+      @media screen and (min-width: 768px) {
+        display: none;
       }
     }
   }
@@ -42,12 +46,15 @@
   }
   .category-posts-list {
     width: 100%;
-    @media screen and (min-width: 640px) {
+    @media screen and (min-width: 768px) {
       float: left;
       width: 77%;
     }
     @media screen and (min-width: 900px) {
       width: 80%;
+    }
+    ul {
+      margin: 0;
     }
     .transition-elastic-fly-container {
       border-radius: 0.75rem;
@@ -57,7 +64,7 @@
         @media screen and (min-width: 480px) {
           padding: 1.5rem;
         }
-        @media screen and (min-width: 640px) {
+        @media screen and (min-width: 768px) {
           padding: 2rem;
         }
       }
@@ -198,12 +205,10 @@
     float: right;
     opacity: 0.8;
     padding: 0 0 0 1rem;
-    @media screen and (min-width: 640px) {
+    @media screen and (min-width: 768px) {
       display: block;
+      padding-right: 0;
       width: 20%;
-    }
-    @media screen and (min-width: 1024px) {
-      padding-right: 1.5rem;
     }
   }
 }
@@ -230,15 +235,15 @@
 .category-posts-transition-container {
   box-shadow: var(--shadow-elevation-low);
   background: var(--rim-light-bg), var(--bg-clr);
-  @media screen and (min-width: 640px) {
+  @media screen and (min-width: 768px) {
     box-shadow: var(--shadow-elevation-high);
   }
   &::before {
     background: var(--rim-light-mask-bg);
   }
-  @media screen and (min-width: 640px) {
+  @media screen and (min-width: 768px) {
     background: var(--category-rim-light-bg), var(--bg-clr);
-    @media screen and (min-width: 640px) {
+    @media screen and (min-width: 768px) {
       box-shadow: var(--shadow-elevation-high);
     }
     &::before {
