--- a/front/src/lib/styles/base/typography.css
+++ b/front/src/lib/styles/base/typography.css
@@ -71,28 +71,40 @@
     }
   }
   h1 {
-    margin-bottom: 1.25rem;
+    margin-bottom: 1rem;
     font-size: 2.25rem;
     line-height: 2.25rem;
     font-family: var(--font-psbl);
+    & + p {
+      margin-top: 0.5rem;
+    }
   }
   h2 {
-    margin-bottom: 1rem;
+    margin-bottom: 0;
     font-size: 1.875rem;
     line-height: 2.25rem;
     font-family: var(--font-psbl);
+    & + p {
+      margin-top: 0.5rem;
+    }
   }
   h3 {
-    margin-bottom: 1rem;
+    margin-bottom: 0;
     font-size: 1.5rem;
     line-height: 2rem;
     font-family: var(--font-psbl);
+    & + p {
+      margin-top: 0.5rem;
+    }
   }
   h4 {
-    margin-bottom: 1rem;
+    margin-bottom: 0;
     font-size: 1.25rem;
     line-height: 1.75rem;
     font-family: var(--font-psb);
+    & + p {
+      margin-top: 0.5rem;
+    }
   }
   h5 {
     margin-bottom: 1rem;
@@ -101,13 +113,16 @@
     font-family: var(--font-psb);
   }
   h6 {
-    margin-bottom: 1rem;
+    margin-bottom: 0;
     font-style: italic;
     font-size: 1rem;
     font-size: 1.125rem;
     line-height: 1.5rem;
     line-height: 1.75rem;
     font-family: var(--font-psb);
+    & + p {
+      margin-top: 0.5rem;
+    }
   }
 }
 h1.page-heading {
@@ -157,24 +172,44 @@ h1.page-heading {
       padding-top: 1.25rem;
     }
     h1 {
+      margin-bottom: 0;
       font-size: 3rem;
       line-height: 1rem;
+      & + p {
+        margin-top: 1rem;
+      }
     }
     h2 {
+      margin-bottom: 0;
       font-size: 2.25rem;
       line-height: 2.5rem;
+      & + p {
+        margin-top: 1rem;
+      }
     }
     h3 {
+      margin-bottom: 0;
       font-size: 1.875rem;
       line-height: 2.25rem;
+      & + p {
+        margin-top: 1rem;
+      }
     }
     h4 {
+      margin-bottom: 0;
       font-size: 1.5rem;
       line-height: 2rem;
+      & + p {
+        margin-top: 1rem;
+      }
     }
     h5 {
+      margin-bottom: 0;
       font-size: 1.125rem;
       line-height: 1.75rem;
+      & + p {
+        margin-top: 1rem;
+      }
     }
   }
   h1.page-heading {
