--- a/front/src/lib/styles/components/page-nav.css
+++ b/front/src/lib/styles/components/page-nav.css
@@ -1,16 +1,17 @@
-.page-navigation {
+.meat .page-navigation {
   h2,
   li {
     text-align: right;
   }
   h2 {
     margin-top: 0.5rem;
+    margin-bottom: 0.75rem;
     color: var(--fg-clr);
-    font-size: 1.33rem;
+    font-size: 1.5rem;
     line-height: 1;
   }
   ul {
-    margin-bottom: 0.5rem;
+    margin: 0 0 0.5rem 0;
   }
   li {
     position: relative;
@@ -52,101 +53,139 @@
       content: '•';
     }
   }
-  &.mini {
-    -webkit-text-select: none;
+}
+
+.page-navigation.mini {
+  -webkit-text-select: none;
+  position: absolute;
+  top: -1rem;
+  right: 1rem;
+  z-index: 10;
+  padding: 0.33rem 0.33rem 0.33rem 2.33rem;
+  width: 100%;
+  overflow: hidden;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  text-align: right;
+  @media screen and (min-width: 640px) {
+    display: none;
+  }
+  .page-navigation-toggle {
+    display: inline-block;
+    position: relative;
+    vertical-align: middle;
+    opacity: 0.8;
+    z-index: 1;
+    transition-duration: var(--transition-duration);
+    transition-property: background-color, color;
+    transition-timing-function: var(--transition-timing-function);
+    cursor: pointer;
+    box-shadow: var(--shadow-elevation-low);
+    border-radius: 0.33rem;
+    background-color: var(--bg-clr);
+    color: var(--fg-clr);
+  }
+  input#page-navigation-checkbox {
     position: absolute;
-    top: -1rem;
-    right: 1rem;
-    z-index: 10;
-    padding: 0.33rem 0.33rem 0.33rem 2.33rem;
-    width: 100%;
-    overflow: hidden;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    text-align: right;
-    @media screen and (min-width: 640px) {
-      display: none;
+    opacity: 0;
+    outline: none;
+    border-radius: 0.33rem;
+    width: 0;
+    height: 0;
+    &:focus,
+    &:focus-visible {
+      ~ .page-navigation-toggle {
+        mix-blend-mode: difference;
+        outline-style: dotted;
+        outline-width: 2px;
+        outline-offset: 1px;
+        background-color: var(--page-nav-toggle-focus-bg-clr);
+        color: var(--link-clr--hover);
+      }
     }
-    .page-navigation-toggle {
-      display: inline-block;
-      position: relative;
-      vertical-align: middle;
-      z-index: 1;
-      transition-duration: var(--transition-duration);
-      transition-property: background-color, color;
-      transition-timing-function: var(--transition-timing-function);
-      cursor: pointer;
-      box-shadow: var(--shadow-elevation-low);
-      border-radius: 0.33rem;
-    }
-    input#page-navigation-checkbox {
-      position: absolute;
-      opacity: 0;
-      outline: none;
-      border-radius: 0.33rem;
-      width: 0;
-      height: 0;
+    ~ .page-navigation-toggle {
+      &:hover,
       &:focus,
       &:focus-visible {
-        ~ .page-navigation-toggle {
-          mix-blend-mode: difference;
-          outline-style: dotted;
-          outline-width: 2px;
-          outline-offset: 1px;
-          background-color: var(--page-nav-toggle-focus-bg-clr);
-          color: var(--link-clr--hover);
-        }
+        background-color: var(--page-nav-toggle-focus-bg-clr);
+        color: var(--link-clr--hover);
       }
-      ~ .page-navigation-toggle {
-        &:hover,
-        &:focus,
-        &:focus-visible {
-          background-color: var(--page-nav-toggle-focus-bg-clr);
-          color: var(--link-clr--hover);
-        }
-        .page-navigation-open {
-          display: block;
-        }
-        .page-navigation-close {
-          display: none;
-        }
-        & + .page-navigation-list {
-          position: relative;
-          top: -1.85rem;
-          right: -333px;
-          visibility: hidden;
-          opacity: 0;
-          backdrop-filter: blur(0.5rem);
-          transition:
-            right var(--transition-duration),
-            opacity var(--transition-duration),
-            max-height 0;
-          transition-duration: var(--transition-duration);
-          transition-timing-function: var(--transition-timing-function);
-          margin-bottom: -1.85rem;
-          border-radius: 0.77rem;
-          padding: 2rem;
-          max-height: 0;
-          overflow: hidden;
-          label.bottom {
-            position: absolute;
-            right: 0;
-            bottom: 0;
-            .page-navigation-open {
-              display: block;
-            }
-            .page-navigation-close {
-              display: none;
-            }
+      .page-navigation-open {
+        display: block;
+      }
+      .page-navigation-close {
+        display: none;
+      }
+      & + .page-navigation-list {
+        position: relative;
+        top: -1.85rem;
+        right: -333px;
+        visibility: hidden;
+        opacity: 0;
+        backdrop-filter: blur(0.5rem);
+        transition:
+          right var(--transition-duration),
+          opacity var(--transition-duration),
+          max-height 0;
+        transition-duration: var(--transition-duration);
+        transition-timing-function: var(--transition-timing-function);
+        margin-bottom: -1.85rem;
+        border-radius: 0.77rem;
+        padding: 2rem;
+        max-height: 0;
+        overflow: hidden;
+        label.bottom {
+          position: absolute;
+          right: 0;
+          bottom: 0;
+          .page-navigation-open {
+            display: block;
+          }
+          .page-navigation-close {
+            display: none;
           }
         }
       }
-      &:checked {
+    }
+    &:checked {
+      &:focus,
+      &:focus-visible {
+        ~ .page-navigation-toggle {
+          mix-blend-mode: normal;
+          background-color: transparent;
+          color: var(--fg-clr-ooo);
+          &:hover,
+          &:focus,
+          &:focus-visible {
+            background-color: transparent;
+            color: var(--link-clr--hover);
+          }
+        }
+      }
+      ~ .page-navigation-toggle {
+        opacity: 1;
+        box-shadow: none;
+        background-color: transparent;
+        &:hover,
         &:focus,
         &:focus-visible {
-          ~ .page-navigation-toggle {
-            mix-blend-mode: normal;
+          background-color: transparent;
+        }
+        .page-navigation-open {
+          display: none;
+        }
+        .page-navigation-close {
+          display: block;
+        }
+        & + .page-navigation-list {
+          right: 0;
+          visibility: visible;
+          opacity: 1;
+          background-color: var(--page-nav-list-bg-clr);
+          max-height: 100%;
+          label.bottom {
+            box-shadow: none;
             background-color: transparent;
             color: var(--fg-clr-ooo);
             &:hover,
@@ -155,69 +194,36 @@
               background-color: transparent;
               color: var(--link-clr--hover);
             }
-          }
-        }
-        ~ .page-navigation-toggle {
-          box-shadow: none;
-          background-color: transparent;
-          &:hover,
-          &:focus,
-          &:focus-visible {
-            background-color: transparent;
-          }
-          .page-navigation-open {
-            display: none;
-          }
-          .page-navigation-close {
-            display: block;
-          }
-          & + .page-navigation-list {
-            right: 0;
-            visibility: visible;
-            opacity: 1;
-            background-color: var(--page-nav-list-bg-clr);
-            max-height: 100%;
-            label.bottom {
-              box-shadow: none;
-              background-color: transparent;
-              color: var(--fg-clr-ooo);
-              &:hover,
-              &:focus,
-              &:focus-visible {
-                background-color: transparent;
-                color: var(--link-clr--hover);
-              }
-              .page-navigation-open {
-                display: none;
-              }
-              .page-navigation-close {
-                display: block;
-              }
+            .page-navigation-open {
+              display: none;
+            }
+            .page-navigation-close {
+              display: block;
             }
           }
         }
-        ~ .page-fence {
-          opacity: 0.7;
-          transition: opacity 0.33s ease-in-out 0.2s;
-          max-height: 100%;
-        }
+      }
+      ~ .page-fence {
+        opacity: 0.7;
+        transition: opacity 0.33s ease-in-out 0.2s;
+        max-height: 100%;
       }
     }
+  }
 
-    .page-fence {
-      position: fixed;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      opacity: 0;
-      z-index: -1;
-      transition:
-        max-height 0s 0.4s,
-        opacity 0.33s ease-in-out 0s;
-      background-color: rgba(0, 0, 0, 0.5);
-      max-height: 0;
-    }
+  .page-fence {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    z-index: -1;
+    transition:
+      max-height 0s 0.4s,
+      opacity 0.33s ease-in-out 0s;
+    background-color: rgba(0, 0, 0, 0.5);
+    max-height: 0;
   }
 }
 
@@ -240,7 +246,7 @@
         &:hover,
         &:focus,
         &:focus-visible {
-          color: var(--fg-clr);
+          color: var(--fg-clr-oo);
         }
         &::after {
           color: var(--highlight-clr);
