--- a/front/src/lib/styles/components/posts-grid.css
+++ b/front/src/lib/styles/components/posts-grid.css
@@ -7,180 +7,192 @@
   margin: 0;
   padding-bottom: 0;
   list-style-type: none;
-  @media screen and (min-width: 640px) {
+}
+
+.posts-grid-item {
+  position: relative;
+  grid-column: span 6;
+  z-index: 1;
+  filter: var(--posts-item-filter);
+  transition-duration: var(--transition-duration);
+  transition-property: filter;
+  transition-timing-function: ease-out;
+  will-change: opacity;
+  cursor: pointer;
+  margin-bottom: 0;
+  box-shadow: var(--shadow-elevation-low);
+  border-radius: 0.75rem;
+  background-position: center top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100%;
+  min-height: 7rem;
+  list-style-type: none;
+  text-align: center;
+  &:hover,
+  &:focus,
+  &:focus-visible,
+  &:active {
+    filter: var(--posts-item-hover-filter);
+  }
+  &:first-child {
+    grid-row: span 24;
+    grid-column: span 6;
+    min-height: 14rem;
+  }
+  &:first-child:last-child {
+    grid-row: span 24;
+  }
+  &:nth-child(n + 1) {
+    grid-row: span 6;
+  }
+  &:nth-child(n + 2) {
+    grid-row: span 18;
+  }
+  &:nth-child(n + 3) {
+    grid-row: span 12;
+  }
+}
+.posts-grid-link {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  backdrop-filter: blur(0.5rem);
+  filter: var(--posts-item-link-filter);
+  transition-duration: var(--transition-duration);
+  transition-property: background-color, color, text-shadow, border-color,
+    box-shadow;
+  transition-timing-function: var(--transition-timing-function);
+  will-change: background-color;
+  box-sizing: border-box;
+  box-shadow: var(--posts-item-link-box-shadow);
+  border: unset;
+  border-radius: 0.75rem;
+  background-color: var(--posts-item-link-bg-clr);
+  padding: 1.5rem 2.25rem;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  font-family: var(--font-psb);
+  &::before {
+    position: absolute;
+    opacity: 0.5;
+    z-index: 6;
+    mask:
+      linear-gradient(3deg, #fff 0 0) content-box,
+      linear-gradient(3deg, #fff 0 0);
+    mask-composite: exclude;
+    inset: 0;
+    border-radius: 0.75rem;
+    background: var(--grid-rim-light-bg);
+    padding: 1px 1px 0 0;
+    content: '';
+  }
+  &:hover,
+  &:focus,
+  &:focus,
+  &:focus-visible,
+  &:active {
+    box-shadow: var(--posts-item-link-hover-box-shadow);
+    background-color: rgba(0, 0, 0, 0);
+    .link-bg {
+      transition-delay: 133ms;
+      background-color: rgba(var(--clr-neut-900-rgb), 0.6);
+      color: rgba(255, 255, 255, 1);
+    }
+  }
+  .link-bg {
+    align-self: center;
+    transition-delay: 0;
+    transition-duration: var(--transition-duration-md);
+    transition-property: background-color, color;
+    transition-timing-function: ease-out;
+    border-radius: 0.5rem;
+    background-color: rgba(var(--clr-neut-900-rgb), 0);
+    background-color: transparent;
+    padding: 0.75rem 2rem;
+    width: auto;
+    color: rgba(255, 255, 255, 0.9);
+    text-wrap: balance;
+  }
+}
+
+@media screen and (min-width: 333px) {
+  .posts-grid-link {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .posts-grid-item {
+    box-shadow: var(--shadow-elevation-medium);
+  }
+}
+
+@media screen and (min-width: 640px) {
+  .posts-grid {
     gap: 0.5rem;
   }
-  @media screen and (min-width: 768px) {
-    gap: 1rem;
-    padding-bottom: 4rem;
-  }
-  .post-item {
-    position: relative;
-    grid-column: span 6;
-    z-index: 1;
-    filter: var(--posts-item-filter);
-    transition-duration: var(--transition-duration);
-    transition-property: filter;
-    transition-timing-function: ease-out;
-    will-change: opacity;
-    cursor: pointer;
-    margin-bottom: 0;
-    box-shadow: var(--shadow-elevation-low);
-    border-radius: 0.75rem;
-    background-position: center top;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100%;
-    min-height: 7rem;
-    list-style-type: none;
-    text-align: center;
-    &:hover,
-    &:focus,
-    &:focus-visible,
-    &:active {
-      filter: var(--posts-item-hover-filter);
-    }
-    @media screen and (min-width: 480px) {
-      box-shadow: var(--shadow-elevation-medium);
-    }
-    .post-link {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      backdrop-filter: blur(0.5rem);
-      filter: var(--posts-item-link-filter);
-      transition-duration: var(--transition-duration);
-      transition-property: background-color, color, text-shadow, border-color,
-        box-shadow;
-      transition-timing-function: var(--transition-timing-function);
-      will-change: background-color;
-      box-sizing: border-box;
-      box-shadow: var(--posts-item-link-box-shadow);
-      border: unset;
-      border-radius: 0.75rem;
-      background-color: var(--posts-item-link-bg-clr);
-      padding: 1.5rem 2.25rem;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      font-family: var(--font-psb);
-      @media screen and (min-width: 333px) {
-        padding-top: 1.5rem;
-        padding-bottom: 1.5rem;
-      }
-      @media screen and (min-width: 768px) {
-        padding-top: 2.25rem;
-        padding-bottom: 2.25rem;
-      }
-      &::before {
-        position: absolute;
-        opacity: 0.5;
-        z-index: 6;
-        mask:
-          linear-gradient(3deg, #fff 0 0) content-box,
-          linear-gradient(3deg, #fff 0 0);
-        mask-composite: exclude;
-        inset: 0;
-        border-radius: 0.75rem;
-        background: var(--grid-rim-light-bg);
-        padding: 1px 1px 0 0;
-        content: '';
-      }
-      &:hover,
-      &:focus,
-      &:focus,
-      &:focus-visible,
-      &:active {
-        box-shadow: var(--posts-item-link-hover-box-shadow);
-        background-color: rgba(0, 0, 0, 0);
-        .link-bg {
-          transition-delay: 133ms;
-          background-color: rgba(var(--clr-neut-900-rgb), 0.6);
-          color: rgba(255, 255, 255, 1);
-        }
-      }
-      .link-bg {
-        align-self: center;
-        transition-delay: 0;
-        transition-duration: var(--transition-duration-md);
-        transition-property: background-color, color;
-        transition-timing-function: ease-out;
-        border-radius: 0.5rem;
-        background-color: rgba(var(--clr-neut-900-rgb), 0);
-        background-color: transparent;
-        padding: 0.75rem 2rem;
-        width: auto;
-        color: rgba(255, 255, 255, 0.9);
-        text-wrap: balance;
-      }
-    }
+  .posts-grid-item {
     &:first-child {
-      grid-row: span 24;
-      grid-column: span 6;
-      min-height: 14rem;
-    }
-    &:first-child:last-child {
-      grid-row: span 24;
-    }
-    &:nth-child(n + 1) {
-      grid-row: span 6;
+      grid-row: span 12;
+      grid-column: span 4;
+      &:last-child {
+        grid-column: span 6;
+        height: 21rem;
+      }
     }
     &:nth-child(n + 2) {
-      grid-row: span 18;
+      grid-row: span 12;
+      grid-column: span 2;
     }
     &:nth-child(n + 3) {
-      grid-row: span 12;
+      grid-column: span 2;
     }
-    @media screen and (min-width: 640px) {
-      &:first-child {
-        grid-row: span 12;
-        grid-column: span 4;
-        &:last-child {
-          grid-column: span 6;
-          height: 21rem;
-        }
-      }
-      &:nth-child(n + 2) {
-        grid-row: span 12;
-        grid-column: span 2;
-      }
-      &:nth-child(n + 3) {
-        grid-column: span 2;
-      }
-      &:nth-child(n + 4) {
-        grid-column: span 4;
-      }
-      &:nth-child(n + 5) {
-        grid-row: span 9;
-        grid-column: span 2;
-      }
-      &:nth-child(n + 8) {
-        grid-column: span 3;
-      }
-      &:last-child:nth-child(2) {
-        grid-column: span 2;
-      }
-      &:last-child:nth-child(3) {
-        grid-column: span 6;
-      }
-      &:last-child:nth-child(4) {
-        grid-column: span 4;
-      }
-      &:last-child:nth-child(5) {
-        grid-column: span 6;
-      }
-      &:last-child:nth-child(6) {
-        grid-column: span 4;
-      }
-      &:last-child:nth-child(7) {
-        grid-column: span 2;
-      }
-      &:last-child:nth-child(8) {
-        grid-column: span 6;
-      }
-      &:last-child:nth-child(9) {
-        grid-column: span 3;
-      }
+    &:nth-child(n + 4) {
+      grid-column: span 4;
     }
+    &:nth-child(n + 5) {
+      grid-row: span 9;
+      grid-column: span 2;
+    }
+    &:nth-child(n + 8) {
+      grid-column: span 3;
+    }
+    &:last-child:nth-child(2) {
+      grid-column: span 2;
+    }
+    &:last-child:nth-child(3) {
+      grid-column: span 6;
+    }
+    &:last-child:nth-child(4) {
+      grid-column: span 4;
+    }
+    &:last-child:nth-child(5) {
+      grid-column: span 6;
+    }
+    &:last-child:nth-child(6) {
+      grid-column: span 4;
+    }
+    &:last-child:nth-child(7) {
+      grid-column: span 2;
+    }
+    &:last-child:nth-child(8) {
+      grid-column: span 6;
+    }
+    &:last-child:nth-child(9) {
+      grid-column: span 3;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .posts-grid {
+    padding-bottom: 4rem;
+  }
+  .posts-grid-link {
+    padding-top: 2.25rem;
+    padding-bottom: 2.25rem;
   }
 }
