--- a/front/src/lib/styles/pages/home.css
+++ b/front/src/lib/styles/pages/home.css
@@ -13,35 +13,10 @@
   transition-duration: var(--transition-duration);
   transition-property: max-width;
   padding-right: 1rem;
-  padding-left: 1rem;
+  padding-left: 2rem;
   text-align: center;
   .image-loader {
     margin: 0.5rem 0;
-  }
-  @media screen and (min-width: 480px) {
-    .image-loader {
-      margin: 0;
-    }
-  }
-  .bio-picture {
-    position: relative;
-    z-index: 5;
-    filter: var(--headshot-filter);
-    transition-duration: var(--transition-duration);
-    transition-property: border-color, opacity, filter;
-    transition-timing-function: var(--transition-timing-function);
-    margin-top: 1rem;
-    box-shadow: var(--shadow-elevation-low);
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-  }
-  @media screen and (min-width: 480px) {
-    padding-right: 0;
-    padding-left: 0;
-    .bio-picture {
-      margin-top: auto;
-    }
   }
   h1.headline {
     filter: brightness(1.25);
@@ -55,10 +30,6 @@
     line-height: 2.25rem;
     font-family: var(--font-psb);
     letter-spacing: -0.025em;
-    @media screen and (min-width: 640px) {
-      font-size: 2.25rem;
-      line-height: 2.5rem;
-    }
   }
   p {
     transition-duration: var(--transition-duration);
@@ -66,11 +37,20 @@
     transition-timing-function: var(--transition-timing-function);
     padding-top: 1.75rem;
   }
-  a {
-    transition-duration: var(--transition-duration);
-    transition-property: color, border-color;
-    border-bottom: 1px solid;
-  }
+}
+
+.bio-picture {
+  position: relative;
+  z-index: 5;
+  filter: var(--headshot-filter);
+  transition-duration: var(--transition-duration);
+  transition-property: border-color, opacity, filter;
+  transition-timing-function: var(--transition-timing-function);
+  margin-top: 1rem;
+  box-shadow: var(--shadow-elevation-low);
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
 }
 
 .links {
@@ -80,12 +60,6 @@
   padding-bottom: 0.75rem;
   padding-left: 2rem;
 
-  @media (min-width: 640px) {
-    padding-bottom: 1.25rem;
-  }
-  @media (min-width: 768px) {
-    padding-bottom: 2.25rem;
-  }
   .link-list {
     display: flex;
     flex-wrap: wrap;
@@ -136,5 +110,52 @@
     .pinboard-icon {
       padding-top: 3px;
     }
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .bio {
+    padding-right: 0;
+    padding-left: 1rem;
+    .image-loader {
+      margin: 0;
+    }
+  }
+  .bio-picture {
+    margin-top: auto;
+  }
+}
+
+@media screen and (min-width: 640px) {
+  .bio h1.headline {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+  .links {
+    padding-bottom: 1.25rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .links {
+    padding-bottom: 2.25rem;
+  }
+}
+
+@media (hover: none),
+  (hover: on-demand),
+  (-moz-touch-enabled: 1),
+  (pointer: coarse) {
+  .bio {
+    padding-left: 1rem;
+  }
+}
+
+@media (hover: none) and (min-width: 480px),
+  (hover: on-demand) and (min-width: 480px),
+  (-moz-touch-enabled: 1) and (min-width: 480px),
+  (pointer: coarse) and (min-width: 480px) {
+  .bio {
+    padding-left: 0;
   }
 }
