--- a/front/src/lib/styles/pages/posts.css
+++ b/front/src/lib/styles/pages/posts.css
@@ -7,19 +7,6 @@
     font-family: var(--font-psbl);
     text-align: center;
   }
-  @media (hover: none),
-    (hover: on-demand),
-    (-moz-touch-enabled: 1),
-    (pointer: coarse) {
-    padding-left: 0;
-  }
-  @media screen and (min-width: 768px) {
-    h1.title {
-      padding-bottom: 1rem;
-      font-size: 3rem;
-      line-height: 1;
-    }
-  }
   .summary {
     margin: auto;
     padding: 0 1rem 1rem 1rem;
@@ -36,25 +23,39 @@
       font-weight: 400;
       font-family: var(--font-psb);
     }
-    @media screen and (min-width: 768px) {
-      column-gap: 2rem;
-      column-count: 2;
-    }
-  }
-  @media screen and (min-width: 768px) {
-    .summary {
-      padding: 0.5rem 0 1rem 0;
-      max-width: 78%;
-      p {
-        padding: 0 0 1rem 0;
-      }
-    }
   }
   p {
     margin-top: 1rem;
     margin-bottom: 1rem;
     code {
       font-size: 1rem;
+    }
+  }
+}
+
+@media (hover: none),
+  (hover: on-demand),
+  (-moz-touch-enabled: 1),
+  (pointer: coarse) {
+  .posts {
+    padding-left: 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  .posts {
+    h1.title {
+      padding-bottom: 1rem;
+      font-size: 3rem;
+      line-height: 1;
+    }
+    .summary {
+      column-gap: 2rem;
+      column-count: 2;
+      padding: 0.5rem 0 1rem 0;
+      max-width: 78%;
+      p {
+        padding: 0 0 1rem 0;
+      }
     }
   }
 }
