--- a/front/src/lib/styles/base/typography.css
+++ b/front/src/lib/styles/base/typography.css
@@ -25,8 +25,8 @@
 .meat {
   line-height: 1.6;
   p {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     code {
       font-size: 1rem;
     }
@@ -63,11 +63,11 @@
     transition-duration: var(--transition-duration);
     transition-property: color;
     transition-timing-function: var(--transition-timing-function);
+    margin-top: 1rem;
     margin-bottom: 1.25rem;
-    padding-top: 1rem;
     letter-spacing: -0.6px;
     &:first-child {
-      padding-top: 0;
+      margin-top: 0;
     }
   }
   h1 {
@@ -76,34 +76,34 @@
     line-height: 2.25rem;
     font-family: var(--font-psbl);
     & + p {
-      margin-top: 0.5rem;
+      padding-top: 0.25rem;
     }
   }
   h2 {
-    margin-bottom: 0;
+    margin-bottom: 0.5rem;
     font-size: 1.875rem;
     line-height: 2.25rem;
     font-family: var(--font-psbl);
     & + p {
-      margin-top: 0.5rem;
+      padding-top: 0.25rem;
     }
   }
   h3 {
-    margin-bottom: 0;
+    margin-bottom: 0.5rem;
     font-size: 1.5rem;
     line-height: 2rem;
     font-family: var(--font-psbl);
     & + p {
-      margin-top: 0.5rem;
+      padding-top: 0.25rem;
     }
   }
   h4 {
-    margin-bottom: 0;
+    margin-bottom: 0.5rem;
     font-size: 1.25rem;
     line-height: 1.75rem;
     font-family: var(--font-psb);
     & + p {
-      margin-top: 0.5rem;
+      padding-top: 0.25rem;
     }
   }
   h5 {
@@ -113,7 +113,7 @@
     font-family: var(--font-psb);
   }
   h6 {
-    margin-bottom: 0;
+    margin-bottom: 0.5rem;
     font-style: italic;
     font-size: 1rem;
     font-size: 1.125rem;
@@ -121,7 +121,7 @@
     line-height: 1.75rem;
     font-family: var(--font-psb);
     & + p {
-      margin-top: 0.5rem;
+      padding-top: 0.25rem;
     }
   }
 }
@@ -168,47 +168,47 @@ h1.page-heading {
     h4,
     h5,
     h6 {
+      margin-top: 1.25rem;
       margin-bottom: 1.75rem;
-      padding-top: 1.25rem;
     }
     h1 {
-      margin-bottom: 0;
+      margin-bottom: 0.5rem;
       font-size: 3rem;
       line-height: 1rem;
       & + p {
-        margin-top: 1rem;
+        padding-top: 0.5rem;
       }
     }
     h2 {
-      margin-bottom: 0;
+      margin-bottom: 0.5rem;
       font-size: 2.25rem;
       line-height: 2.5rem;
       & + p {
-        margin-top: 1rem;
+        padding-top: 0.5rem;
       }
     }
     h3 {
-      margin-bottom: 0;
+      margin-bottom: 0.5rem;
       font-size: 1.875rem;
       line-height: 2.25rem;
       & + p {
-        margin-top: 1rem;
+        padding-top: 0.5rem;
       }
     }
     h4 {
-      margin-bottom: 0;
+      margin-bottom: 0.5rem;
       font-size: 1.5rem;
       line-height: 2rem;
       & + p {
-        margin-top: 1rem;
+        padding-top: 0.5rem;
       }
     }
     h5 {
-      margin-bottom: 0;
+      margin-bottom: 0.5rem;
       font-size: 1.125rem;
       line-height: 1.75rem;
       & + p {
-        margin-top: 1rem;
+        padding-top: 0.5rem;
       }
     }
   }
