--- a/front/src/lib/styles/components/animated-image.css
+++ b/front/src/lib/styles/components/animated-image.css
@@ -1,5 +1,6 @@
 .animated-image {
   display: block;
+  padding-bottom: 0.5rem;
   width: 100%;
   height: 100%;
   &:hover {
@@ -143,6 +144,9 @@
     font-size: 0.875rem;
     font-family: var(--font-lb);
     text-align: center;
+    p {
+      padding-top: 0;
+    }
     p code {
       font-size: 0.875rem;
     }
