--- a/front/src/lib/styles/components/page-nav.css
+++ b/front/src/lib/styles/components/page-nav.css
@@ -6,7 +6,7 @@
   h2 {
     margin-top: 0.5rem;
     margin-bottom: 0.75rem;
-    color: var(--pagenav-heading);
+    color: var(--page-nav-heading);
     font-size: 1.25rem;
     line-height: 1;
   }
@@ -93,7 +93,6 @@
     border-radius: 0.33rem;
     width: 0;
     height: 0;
-    &:focus,
     &:focus-visible {
       ~ .page-navigation-toggle {
         mix-blend-mode: difference;
@@ -109,7 +108,7 @@
       &:focus,
       &:focus-visible {
         background-color: var(--page-nav-toggle-focus-bg-clr);
-        color: var(--link-clr--hover);
+        color: var(--page-nav-toggle-focus-clr);
       }
       .page-navigation-open {
         display: block;
@@ -153,6 +152,7 @@
       &:focus-visible {
         ~ .page-navigation-toggle {
           mix-blend-mode: normal;
+          outline-color: var(--fg-clr);
           background-color: transparent;
           color: var(--fg-clr-ooo);
           &:hover,
