--- a/front/src/lib/styles/components/animated-image.css
+++ b/front/src/lib/styles/components/animated-image.css
@@ -144,6 +144,7 @@
     font-size: 0.875rem;
     font-family: var(--font-lb);
     text-align: center;
+    text-wrap: balance;
     p {
       padding-top: 0;
     }
