--- a/front/src/lib/styles/base/layout.css
+++ b/front/src/lib/styles/base/layout.css
@@ -22,7 +22,7 @@
   position: relative;
   align-items: center;
   z-index: 1;
-  padding: 1rem 0 0 1rem;
+  padding: 0.75rem 0 0 1rem;
 }
 
 body.ready .header {
@@ -166,6 +166,9 @@ body.ready .header.scroll-transition {
   (pointer: coarse) {
   .header {
     padding: 1.5rem 1.5rem 0 1.5rem;
+    .theme-toggle {
+      padding-right: 0;
+    }
   }
 }
 
@@ -182,7 +185,7 @@ body.ready .header.scroll-transition {
     padding-left: 0.75rem;
   }
   .header {
-    padding: 2rem 1rem 0 2rem;
+    padding: 1.75rem 1rem 0 2rem;
   }
   .posts,
   .post,
