--- a/front/src/lib/styles/global.css
+++ b/front/src/lib/styles/global.css
@@ -34,10 +34,10 @@ html {
 body {
   display: flex;
   position: relative;
+  top: 0.5rem;
   flex-direction: column;
   align-items: center;
   transition: scrollbar-color 1s;
-  margin-top: 0.5rem;
   padding-right: 7px;
   padding-left: 7px;
   height: 100vh;
@@ -112,6 +112,7 @@ body {
 
 .bio a,
 .footer a,
+.privacy a,
 .not-found a {
   transition-duration: var(--transition-duration);
   transition-property: color, border-color;
@@ -121,7 +122,7 @@ body {
   &:hover,
   &:focus {
     border-bottom-color: var(--highlight-clr);
-    color: var(--fg-clr);
+    color: var(--link-clr--hover);
   }
 }
 
@@ -129,6 +130,7 @@ a.scroll-top {
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 0;
   color: var(--fg-clr-oo);
   font-size: 0.75rem;
   line-height: 1rem;
@@ -148,7 +150,6 @@ a.scroll-top {
   margin-bottom: 0.3rem;
 }
 
-.privacy a:not(.heading-anchor-link),
 .post-article a:not(.heading-anchor-link) {
   border-bottom: 1px solid var(--link-clr);
   color: var(--link-clr);
