fix(front): fixes body collapsing margin

--- a/front/src/lib/styles/global.css
+++ b/front/src/lib/styles/global.css
@@ -23,6 +23,8 @@
 }
 
 html {
+  display: block;
+  position: relative;
   transition: background-color;
   transition-duration: var(--transition-duration-md);
   background-color: var(--bg-clr);
@@ -34,10 +36,11 @@ html {
 body {
   display: flex;
   position: relative;
-  top: 0.5rem;
+  flex-grow: 0;
   flex-direction: column;
   align-items: center;
   transition: scrollbar-color 1s;
+  border-top: 0.5rem solid transparent;
   padding-right: 7px;
   padding-left: 7px;
   height: 100vh;
