build(front): updates noscript styles and components (#927)
Closes: #927

--- a/front/src/lib/styles/global.css
+++ b/front/src/lib/styles/global.css
@@ -23,6 +23,8 @@
 }
 
 html {
+  display: block;
+  position: relative;
   transition: background-color;
   transition-duration: var(--transition-duration-md);
   background-color: var(--bg-clr);
@@ -34,10 +36,11 @@ html {
 body {
   display: flex;
   position: relative;
+  flex-grow: 0;
   flex-direction: column;
   align-items: center;
   transition: scrollbar-color 1s;
-  margin-top: 0.5rem;
+  border-top: 0.5rem solid transparent;
   padding-right: 7px;
   padding-left: 7px;
   height: 100vh;
@@ -112,6 +115,7 @@ body {
 
 .bio a,
 .footer a,
+.privacy a,
 .not-found a {
   transition-duration: var(--transition-duration);
   transition-property: color, border-color;
@@ -121,7 +125,7 @@ body {
   &:hover,
   &:focus {
     border-bottom-color: var(--highlight-clr);
-    color: var(--fg-clr);
+    color: var(--link-clr--hover);
   }
 }
 
@@ -129,6 +133,7 @@ a.scroll-top {
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 0;
   color: var(--fg-clr-oo);
   font-size: 0.75rem;
   line-height: 1rem;
@@ -148,7 +153,6 @@ a.scroll-top {
   margin-bottom: 0.3rem;
 }
 
-.privacy a:not(.heading-anchor-link),
 .post-article a:not(.heading-anchor-link) {
   border-bottom: 1px solid var(--link-clr);
   color: var(--link-clr);
